# XV6-Priority-Scheduler

./: .gitignore  Readme.md  lab-manual.docx
xv6-public/: .gitignore  .syscall.c.swp  CMakeLists.txt  Makefile  defs.h  prioSet.c  proc.c  proc.h  ps.c  readtest.c  syscall.c  syscall.h  sysproc.c  testmyscheduler.c  uproc.h  user.h  usys.S
