cmake_minimum_required(VERSION 3.7)
project(xv6_public)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        _cat
        _echo
        _forktest
        _grep
        _init
        _kill
        _ln
        _ls
        _mkdir
        _ps
        _readtest
        _rm
        _sh
        _stressfs
        _usertests
        _wc
        _zombie
        asm.h
        bio.c
        bio.d
        bio.o
        bootasm.d
        bootasm.o
        bootasm.S
        bootblock
        bootblock.asm
        bootblock.o
        bootmain.c
        bootmain.d
        bootmain.o
        buf.h
        BUGS
        cat.asm
        cat.c
        cat.d
        cat.o
        cat.sym
        console.c
        console.d
        console.o
        cuth
        date.h
        defs.h
        dot-bochsrc
        echo.asm
        echo.c
        echo.d
        echo.o
        echo.sym
        elf.h
        entry.S
        entryother.S
        exec.c
        exec.d
        exec.o
        fcntl.h
        file.c
        file.d
        file.h
        file.o
        forktest.asm
        forktest.c
        forktest.d
        forktest.o
        fs.c
        fs.d
        fs.h
        fs.img
        fs.o
        gdbutil
        grep.asm
        grep.c
        grep.d
        grep.o
        grep.sym
        ide.c
        ide.d
        ide.o
        init.asm
        init.c
        init.d
        init.o
        init.sym
        initcode.S
        ioapic.c
        ioapic.d
        ioapic.o
        kalloc.c
        kalloc.d
        kalloc.o
        kbd.c
        kbd.d
        kbd.h
        kbd.o
        kernel.ld
        kill.asm
        kill.c
        kill.d
        kill.o
        kill.sym
        lapic.c
        lapic.d
        lapic.o
        LICENSE
        ln.asm
        ln.c
        ln.d
        ln.o
        ln.sym
        log.c
        log.d
        log.o
        ls.asm
        ls.c
        ls.d
        ls.o
        ls.sym
        main.c
        main.d
        main.o
        Makefile
        memide.c
        memlayout.h
        mkdir.asm
        mkdir.c
        mkdir.d
        mkdir.o
        mkdir.sym
        mkfs
        mkfs.c
        mmu.h
        mp.c
        mp.d
        mp.h
        mp.o
        Notes
        param.h
        picirq.c
        picirq.d
        picirq.o
        pipe.c
        pipe.d
        pipe.o
        pr.pl
        printf.c
        printf.d
        printf.o
        printpcs
        proc.c
        proc.h
        ps.asm
        ps.c
        ps.d
        ps.o
        ps.sym
        README
        readtest.asm
        readtest.c
        readtest.d
        readtest.o
        readtest.sym
        rm.asm
        rm.c
        rm.d
        rm.o
        rm.sym
        runoff
        runoff.list
        runoff.spec
        runoff1
        sh.asm
        sh.c
        sh.d
        sh.o
        sh.sym
        show1
        sign.pl
        sleep1.p
        spinlock.c
        spinlock.h
        spinp
        stat.h
        stressfs.asm
        stressfs.c
        stressfs.d
        stressfs.o
        stressfs.sym
        string.c
        swtch.S
        symlink.patch
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        timer.c
        toc.ftr
        toc.hdr
        trap.c
        trapasm.S
        traps.h
        TRICKS
        types.h
        uart.c
        ulib.c
        ulib.d
        ulib.o
        umalloc.c
        umalloc.d
        umalloc.o
        uproc.h
        user.h
        usertests.asm
        usertests.c
        usertests.d
        usertests.o
        usertests.sym
        usys.o
        usys.S
        vectors.pl
        vm.c
        wc.asm
        wc.c
        wc.d
        wc.o
        wc.sym
        x86.h
        zombie.asm
        zombie.c
        zombie.d
        zombie.o
        zombie.sym)

add_executable(xv6_public ${SOURCE_FILES})